--- a/app/css/shoof.ui.css
+++ b/app/css/shoof.ui.css
@@ -1,5 +1,17 @@
 /* line 4, ../../src/scss/shoof.ui.scss */
 body {
   font: 100% Helvetica, sans-serif;
-  color: #66cc00;
+  color: black;
+}
+
+/* line 8, ../../src/scss/shoof.ui.scss */
+.container-wrapper {
+  border: #e2e2e2 1px solid;
+}
+
+/* line 11, ../../src/scss/shoof.ui.scss */
+.container-wrapper p.debug-box {
+  background-color: #e2e2e2;
+  color: #666;
+  padding: 0em 1em;
 }
